--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_FIREBASE_PROJECT_ID=asset-allocation-bf70b
 VITE_FIREBASE_STORAGE_BUCKET=asset-allocation-bf70b.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=385196788051
 VITE_FIREBASE_APP_ID=1:385196788051:web:4264a51e4614ae8c86f9a6
+
+VITE_FINNHUB_API_KEY=
