Fix GitHub Pages deployment workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assetallocation",
-  "homepage": "https://mujahidrj.github.io/AssetAllocationApp",
+  "homepage": "https://mujahidrj.github.io/AssetAllocationApp/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
