--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,8 @@
   ],
   "functions": {
     "api/stock.ts": {
-      "memory": "1024MB",
-      "maxDuration": "10s"
+      "memory": "1024",
+      "maxDuration": "10"
     }
   }
 }
