--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,22 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://asset-allocation-app-nine.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,HEAD" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" },
+        { "key": "Access-Control-Max-Age", "value": "86400" }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/stock/:symbol",
-      "destination": "/api/stock"
+      "destination": "/api/stock?symbol=:symbol"
     }
   ],
   "functions": {
