--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_API_URL=https://${VERCEL_URL}
+# Use window.location.origin in production instead of VITE_API_URL
 VITE_FIREBASE_API_KEY=AIzaSyBHx0oHIti84KLVQ8TNySvAwsqjQKyE-FM
 VITE_FIREBASE_AUTH_DOMAIN=asset-allocation-bf70b.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=asset-allocation-bf70b
