Add test suite, CI workflow, coverage docs
Add comprehensive tests, test infrastructure, and CI: introduce many unit tests for calculator hooks and UI components plus LoginButton; add MSW handlers/server, test setup and utilities. Add GitHub Actions workflow to run lint/tests/coverage on push/PR/schedule and ignore coverage artifacts in .gitignore. Add coverage report and testing/maintenance docs (COVERAGE_REPORT.md, TESTING.md, TEST_MAINTENANCE.md). Update package.json/dev dependencies and vite.config for testing (MSW and Vitest coverage plugin) and apply small test-related fixes to useCalculator and auth to improve testability.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "preview": "vite preview --port 8080",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:ci": "vitest run --coverage --reporter=verbose",
+    "test:update": "vitest run -u",
     "start": "node server/server.js"
   },
   "dependencies": {
@@ -35,6 +39,7 @@
     "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
@@ -43,12 +48,14 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "autoprefixer": "^10.4.16",
     "concurrently": "^9.1.2",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "jsdom": "^22.1.0",
+    "msw": "^2.12.7",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
