--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@vitest/coverage-v8": "^0.34.6",
     "autoprefixer": "^10.4.16",
     "concurrently": "^9.1.2",
-    "eslint": "^8.53.0",
+    "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "jsdom": "^22.1.0",
@@ -58,6 +58,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.54.0",
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
   }
