Add StockSearch UI and Yahoo search proxy
Introduce a new StockSearch component (and CSS) with a fixed-position dropdown for symbol/company autocomplete, and integrate it into AddStockForm, StockList, and HoldingsTable to replace raw text inputs. Add a Vercel API endpoint (api/search.ts) and a local server route to proxy Yahoo Finance search (with CORS, timeout and result normalization). Update useCalculator to call the /api/search proxy (remove direct Finnhub usage), adjust Calculator types to accept optional companyName for addStock, and wire through companyName when auto-selecting search results. Tidy CSS (StockList.module.css) to allow dropdown overlays. Update and add tests to reflect the new search UX and proxy behavior.

--- a/vercel.json
+++ b/vercel.json
@@ -18,10 +18,18 @@
     {
       "source": "/api/stock/:symbol",
       "destination": "/api/stock?symbol=:symbol"
+    },
+    {
+      "source": "/api/search",
+      "destination": "/api/search"
     }
   ],
   "functions": {
     "api/stock.ts": {
+      "memory": 1024,
+      "maxDuration": 10
+    },
+    "api/search.ts": {
       "memory": 1024,
       "maxDuration": 10
     }
